# lance-tensorflow

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lance_tensorflow/: __init__.py  data.py
tests/: test_data.py  test_package.py
